# octo-core

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: cpu.h  display.h  keyboard.h
src/: cpu.c  display.c  keyboard.c  main.c
